--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": "@explodingcamera/eslint-config"
+  "extends": "@explodingcamera/eslint-config",
+  "rules": {
+    "react/prop-types": 0
+  }
 }
