refactor react components, add notes
Signed-off-by: Henry Gressmann <mail@henrygressmann.de>

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "snowstorm dev",
     "start": "snowstorm start",
     "build": "snowstorm export",
-    "test": "vitest"
+    "test-watch": "vitest",
+    "test": "vitest run"
   },
   "dependencies": {
     "@snowstorm/cli": "^0.18.0",
