--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@snowstorm/cli": "^0.18.0",
-    "@snowstorm/core": "^0.18.0",
+    "@snowstorm/cli": "^0.19.0--canary.46.7d2b9c1.0",
+    "@snowstorm/core": "^0.19.0--canary.46.7d2b9c1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-query": "^3.34.19",
